General | dietpi.txt: Added an dev option to force a resize + expansion on rootfs partition for next boot (fs_force_resize=1)
General | RT kernel for RPi is now available, can be installed with "/DietPi/dietpi/func/dietpi-set_hardware kernel dietpi_rpi_rt"
DietPi-Software | Home Assistant: Now available for installation. Many thanks to @sytone for adding this: https://github.com/Fourdee/DietPi/pull/1087
DietPi-Software | Sabnzbd: Updated to 2.1.0 for new installations only: https://github.com/Fourdee/DietPi/issues/865#issuecomment-319110395
DietPi-Config | Networking > WiFi: Added a feature which will monitor the Wifi connection and automatically reconnect, if the gateway is unavailable (eg: connection drop): https://github.com/Fourdee/DietPi/issues/1074

Bug fixes:
General | (Odroid C2): Resolved an issue where APT would fail to continue, due to deb-multimedia removing ARMv8 (ARM64) packages: https://github.com/Fourdee/DietPi/issues/1096
DietPi-AutoStart | Resolved an issue where OPi devices would fail to execute selected autostart option: https://github.com/Fourdee/DietPi/issues/1109
DietPi-BugReport | Increased max upload size from 50MB to 80MB: https://github.com/Fourdee/DietPi/issues/1086#issuecomment-317724186
DietPi-Config | Corrected firmware upgrade code for OrangePi devices: http://dietpi.com/phpbb/viewtopic.php?f=11&t=2149&p=8295#p8295
DietPi-Software | Mumble/MurMur: Resolved an issue where superuser password was not being set during installation: http://dietpi.com/phpbb/viewtopic.php?f=11&t=2024#p8084
DietPi-Software | Tondio: Resolved an issue where the installation would fail due to lack of libjpeg8 packages, on Debian repos. Packages now hosted on dietpi.com: https://github.com/Fourdee/DietPi/issues/1101
DietPi-Software | Sparky SBC: WiFi Hotspot now triggers the RTL driver during install. This is hard coded, to configure for the official Allo WiFi dongle.
