@@ -338,49 +338,49 @@ _EOF_
 	declare -A aSOFTWARE_AVAIL_HW_ARCH
 
 	#/////////////////////////////////////////////////////////////////////////////////////
-	# This function generates the array for all the software avaliable to be installed. 
+	# This function generates the array for all the software avaliable to be installed.
 	#
 	# Reference:
-	# - Adding new software to DietPi-Software 
+	# - Adding new software to DietPi-Software
 	#   https://github.com/Fourdee/DietPi/issues/490#issuecomment-244416570
 	#
 	# Adding Software to the Install List:
 	# ------------------------------------
 	# - index_current:
 	#   This is the next number in the sequence, each software install has a unique number
-	#   so it can be referenced in all arrays. This has to be the same for install, uninstall 
-	#   and setting up the service. Run "dietpi-software list | grep 'index Current'" to 
-	#   get the next number in the sequence. Ensure you are running a testing build as 
+	#   so it can be referenced in all arrays. This has to be the same for install, uninstall
+	#   and setting up the service. Run "dietpi-software list | grep 'index Current'" to
+	#   get the next number in the sequence. Ensure you are running a testing build as
 	#   release may be behind the testing branch and avaliable software packages
 	#
 	# - aSOFTWARE_WHIP_NAME:
-	#   This is the name to display in the UI. 
+	#   This is the name to display in the UI.
 	#
 	# - aSOFTWARE_WHIP_DESC:
-	#   This is the description to place next to the name in the UI. 
+	#   This is the description to place next to the name in the UI.
 	#
 	# - aSOFTWARE_CATEGORY_INDEX:
-	#   If you are adding a new peice of software first choose the category it goes under 
-	#   (aSOFTWARE_CATEGORIES_DIETPI or  aSOFTWARE_CATEGORIES_LINUX) this will give you 
+	#   If you are adding a new peice of software first choose the category it goes under
+	#   (aSOFTWARE_CATEGORIES_DIETPI or  aSOFTWARE_CATEGORIES_LINUX) this will give you
 	#   the aSOFTWARE_CATEGORY_INDEX to set, in the example belo this is 0.
 	#
 	# - aSOFTWARE_TYPE:
-	#   If this is aSOFTWARE_CATEGORIES_DIETPI then aSOFTWARE_TYPE = 0 if it is 
+	#   If this is aSOFTWARE_CATEGORIES_DIETPI then aSOFTWARE_TYPE = 0 if it is
 	#   aSOFTWARE_CATEGORIES_LINUX then it is 1. In the example it is 0.
 	#
 	# - aSOFTWARE_ONLINEDOC_URL:
 	#   This is appeneded to FP_ONLINEDOC_URL to make a URL for help on this software.
 	#
 	# Specifying other software as dependencies:
-	#   If you need other software to be avaliable for you look under the 'Requires software 
+	#   If you need other software to be avaliable for you look under the 'Requires software
 	#   to be installed' heading and then add that to the section you create. In the example
-	#   below ALSA and XSERVERXORG are needed. The system will check to see if they are 
-	#   installed and if not will install them for you. 
-	# 
+	#   below ALSA and XSERVERXORG are needed. The system will check to see if they are
+	#   installed and if not will install them for you.
+	#
 	# Dealing with Hardware types:
 	#   If you have hardware requirements like must not/only be installed on a pi then you need
 	#   to add something like the following, look for other examples in the existing software
-	#   installations. Full list of models can be found in 'dietpi-obtain_hw_model' 
+	#   installations. Full list of models can be found in 'dietpi-obtain_hw_model'
 	#
 	#	# - Disabled for All non-rpi
 	#	for ((i=10; i<=$MAX_HW_MODEL; i++))
@@ -2921,7 +2921,8 @@ _EOF_
 
 		#Software that requires Avahi-Daemon
 		index=152
-		if (( ${aSOFTWARE_INSTALL_STATE[37]} == 1 ||
+		if (( ${aSOFTWARE_INSTALL_STATE[31]} == 1 ||
+			${aSOFTWARE_INSTALL_STATE[37]} == 1 ||
 			${aSOFTWARE_INSTALL_STATE[128]} == 1 ||
 			${aSOFTWARE_INSTALL_STATE[138]} == 1 )); then
 
@@ -3236,20 +3237,20 @@ _EOF_
 	}
 
 	#/////////////////////////////////////////////////////////////////////////////////////
-	# This function handles the installation of the selected software. 
+	# This function handles the installation of the selected software.
 	#
 	# Reference:
-	# - Adding new software to DietPi-Software 
+	# - Adding new software to DietPi-Software
 	#   https://github.com/Fourdee/DietPi/issues/490#issuecomment-244416570
 	#
 	# Installing the software:
 	# ------------------------------------
 	# - INSTALLING_INDEX:
-	#   This has to be the same number as index_current for the software list above. 
+	#   This has to be the same number as index_current for the software list above.
 	#
 	# - INSTALL_URL_ADDRESS:
 	#   This can be used to check conectivity to items you need to download later. A
-	#   good example would also be a git repo. 
+	#   good example would also be a git repo.
 	#
 	# Example:
 	#	#------------------ Bittorrent: HTPC Manager ------------------
@@ -7475,7 +7476,7 @@ _EOF_
 			adduser --system homeassistant
 			addgroup homeassistant
 			usermod -G dialout -a homeassistant
-			# this allows the dietpi user to edit the files along with HA. 
+			# this allows the dietpi user to edit the files along with HA.
 			usermod -G dietpi -a homeassistant
 			mkdir /srv/homeassistant
 			chown homeassistant:homeassistant /srv/homeassistant
@@ -7488,7 +7489,7 @@ source /srv/homeassistant/bin/activate
 pip3 install colorlog PyMySQL mysqlclient
 pip3 install --upgrade homeassistant
 EOF
-		fi		
+		fi
 
 		#-------------------------------------------------------------------
 
@@ -7679,16 +7680,16 @@ EOF
 	}
 
 	#/////////////////////////////////////////////////////////////////////////////////////
-	# Configuration post installation goes here. 
+	# Configuration post installation goes here.
 	#
 	# Reference:
-	# - Adding new software to DietPi-Software 
+	# - Adding new software to DietPi-Software
 	#   https://github.com/Fourdee/DietPi/issues/490#issuecomment-244416570
 	#
 	# Adding post installation steps.
 	# ------------------------------------
 	# - INSTALLING_INDEX:
-	#   This has to be the same number as index_current for the software list above. 
+	#   This has to be the same number as index_current for the software list above.
 	#
 	# Here you can add any configuration changes or addtions to systemd. After this
 	# has run it will reload the systemd environment and start any services installed
@@ -8668,7 +8669,6 @@ debug_file = /var/log/mopidy.log
 library = images
 media_dir = $FP_DIETPI_USERDATA_DIRECTORY/Music
 enabled = true
-library = json
 scan_timeout = 1000
 scan_flush_threshold = 100
 scan_follow_symlinks = false
@@ -11364,7 +11364,7 @@ _EOF_
 			ln -sf "$FP_DIETPI_USERDATA_DIRECTORY"/steam "$HOME"/.steam
 
 		fi
-		
+
 		#------------------ Home Automation: Home Assistant ------------------
 		INSTALLING_INDEX=157
 		if (( ${aSOFTWARE_INSTALL_STATE[$INSTALLING_INDEX]} == 1 )); then
@@ -11388,8 +11388,8 @@ _EOF_
 			# the configuration avaliable for the user to edit. Configuration generated
 			# when service is started at /home/homeassistant/.homeassistant
 			mkdir "$FP_DIETPI_USERDATA_DIRECTORY"/homeassistant
-			ln -sf "$FP_DIETPI_USERDATA_DIRECTORY"/homeassistant /home/homeassistant/.homeassistant 
-		fi		
+			ln -sf "$FP_DIETPI_USERDATA_DIRECTORY"/homeassistant /home/homeassistant/.homeassistant
+		fi
 		#-------------------------------------------------------------------
 
 	}
