@@ -2708,6 +2708,26 @@ _EOF_
 
 		fi
 		#-------------------------------------------------------------------------------
+		#Sparky, update to disabled modules
+		if (( $HW_MODEL == 70 )); then
+
+			cat << _EOF_ > /etc/modprobe.d/disable_sparkysbc_touchscreen.conf
+blacklist owl_camera
+blacklist gsensor_stk8313
+blacklist ctp_ft5x06
+blacklist gsensor_bma222
+blacklist gsensor_mir3da
+_EOF_
+
+			cat << _EOF_ > /etc/modprobe.d/disable_sparkysbc_gpu.conf
+blacklist pvrsrvkm
+blacklist drm
+blacklist videobuf2_vmalloc
+blacklist bc_example
+_EOF_
+
+		fi
+		#-------------------------------------------------------------------------------
 
 	fi
 
