@@ -8,9 +8,11 @@ Changes / Improvements / Optimizations:
 General | RPi: Kernel updated to 4.9.40. Includes improved driver support for Allo Piano and DiGi One: https://github.com/raspberrypi/linux/pull/2149
 General | dietpi.txt: Added an dev option to force a resize + expansion on rootfs partition for next boot (fs_force_resize=1)
 General | RT kernel for RPi is now available, can be installed with "/DietPi/dietpi/func/dietpi-set_hardware kernel dietpi_rpi_rt"
+General | Reworked the disabled modules for Sparky. Disables touchscreen and GPU modules (thanks @sudeep).
+DietPi-Config | Networking > WiFi: Added a feature which will monitor the Wifi connection and automatically reconnect, if the gateway is unavailable (eg: connection drop): https://github.com/Fourdee/DietPi/issues/1074
 DietPi-Software | Home Assistant: Now available for installation. Many thanks to @sytone for adding this: https://github.com/Fourdee/DietPi/pull/1087
 DietPi-Software | Sabnzbd: Updated to 2.1.0 for new installations only: https://github.com/Fourdee/DietPi/issues/865#issuecomment-319110395
-DietPi-Config | Networking > WiFi: Added a feature which will monitor the Wifi connection and automatically reconnect, if the gateway is unavailable (eg: connection drop): https://github.com/Fourdee/DietPi/issues/1074
+DietPi-Software | Kodi: Now installs avahi-daemon by default: http://dietpi.com/phpbb/viewtopic.php?f=11&t=2148&p=8323#p8316
 
 Bug fixes:
 General | (Odroid C2): Resolved an issue where APT would fail to continue, due to deb-multimedia removing ARMv8 (ARM64) packages: https://github.com/Fourdee/DietPi/issues/1096
@@ -20,6 +22,7 @@ DietPi-Config | Corrected firmware upgrade code for OrangePi devices: http://die
 DietPi-Software | Mumble/MurMur: Resolved an issue where superuser password was not being set during installation: http://dietpi.com/phpbb/viewtopic.php?f=11&t=2024#p8084
 DietPi-Software | Tondio: Resolved an issue where the installation would fail due to lack of libjpeg8 packages, on Debian repos. Packages now hosted on dietpi.com: https://github.com/Fourdee/DietPi/issues/1101
 DietPi-Software | Sparky SBC: WiFi Hotspot now triggers the RTL driver during install. This is hard coded, to configure for the official Allo WiFi dongle.
+DietPi-Software | Mopidy: Resolved an issue where the libary would fail to update. Many thanks to Sciamano: http://dietpi.com/phpbb/viewtopic.php?f=11&t=2112
 
 -----------------------------------------------------------------------------------------------------------
 
